printscript-validator/src/test/resources/1.1/invalid-type-readEnv-argument/main.ps
let x: string = readEnv(5);